Bugfixes and tweaks

--- a/RentTracker.Web/wwwroot/css/AppView.css
+++ b/RentTracker.Web/wwwroot/css/AppView.css
@@ -1,1 +1,1 @@
-.navbar[data-v-af5b1528]{-webkit-transition:all .5s ease-in;transition:all .5s ease-in}.drawer[data-v-af5b1528]{z-index:99999999}.content-view[data-v-3c0ee392]{max-height:calc(100vh - 62px);min-height:calc(100vh - 62px);overflow:auto}
+.navbar[data-v-cb7a379c]{-webkit-transition:all .5s ease-in;transition:all .5s ease-in}.navbar-logo[data-v-cb7a379c]{height:2rem;padding-bottom:.4rem}.drawer[data-v-cb7a379c]{z-index:99999999}.content-view[data-v-3c0ee392]{max-height:calc(100vh - 62px);min-height:calc(100vh - 62px);overflow:auto}
